# my-note

./: .claude-hub.jsonl  .env.example  .gitignore  Dockerfile  VISION.md  docker-compose.dev.yml  docker-compose.yml
backend/: pyproject.toml
backend/src/my_note/: config.py  main.py
backend/src/my_note/models/: document.py  finding.py  project.py
backend/src/my_note/routers/: health.py
backend/src/my_note/services/: chunker.py  extractor.py  knowledge_db.py  qdrant_client.py
backend/tests/: test_chunker.py  test_extractor.py  test_knowledge_db.py  test_qdrant_client.py
docs/reports/: 2026-03-15T13-59.md  2026-03-15T15-00.md  2026-03-15T16-00.md  2026-03-15T17-03.md  2026-03-15T18-03.md  2026-03-15T19-04.md  2026-03-15T20-05.md  2026-03-15T21-05.md  2026-03-15T22-06.md  2026-03-15T23-06.md  2026-03-16T00-07.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: EntitiesPanel.tsx  FindingsPanel.tsx  HealthBadge.tsx  Layout.tsx  LoadingIndicator.tsx  QueryHistory.tsx  QueryInput.tsx  QueryResults.tsx  SourcesPanel.tsx
frontend/src/components/IngestPanel/: DocumentList.tsx  FileUploadForm.tsx  RawTextForm.tsx  UrlIngestForm.tsx
frontend/src/pages/: ProjectDetail.tsx  ProjectList.tsx  QueryView.tsx
