[project]
name = "my-note"
version = "0.1.0"
description = "Local-first AI knowledge agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.21",
    "httpx>=0.28",
    "qdrant-client>=1.12",
    "voyageai>=0.3",
    "pdfplumber>=0.11",
    "pdf2image>=1.17",
    "pytesseract>=0.3",
    "python-docx>=1.1",
    "trafilatura>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_note"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
